--- a/create_post.html
+++ b/create_post.html
@@ -4,6 +4,8 @@
 		<form action = "/make-post?blog_writer={{author}}" method = "post">
 			<div><textarea name = "title" rows = "1" cols = "80"></textarea></div>
 			<div><textarea name = "content" rows = "10" cols = "80"></textarea></div>
+			
+			<div><input type="submit" value="Add Post"></div>
 		</form>
 	</body>
 </html>
