Properly displays blog content newlines in HTML

--- a/post_success.html
+++ b/post_success.html
@@ -3,8 +3,8 @@
 	<body>
 		<p>You wrote the following post:
 		<h3>{{title}}</h3>
-		<p>By: {{author}}
-		<p>{{content}}
+		<p>By: {{author}} on {{time}}
+		<p>{{content|safe}}
 		<form action = "/make-post" method = "get">
 			<div><input type="submit" value="Add Another Post"></div>
 		</form>
