--- a/create_post.html
+++ b/create_post.html
@@ -6,7 +6,7 @@
 			<div>
 				<textarea name = "content" rows = "10" cols = "80"></textarea>
 			</div>
-			
+			<div><textarea name = "tags" rows = "1" cols = "80"></textarea></div>
 			<div><input type="submit" value="Add Post"></div>
 		</form>
 	</body>
