--- a/post_success.html
+++ b/post_success.html
@@ -5,6 +5,7 @@
 		<h3>{{title}}</h3>
 		<p>By: {{author}} on {{time}}
 		<p>{{content|safe}}
+		<p>With tags: {{tags}}
 		<form action = "/make-post" method = "get">
 			<div><input type="submit" value="Add Another Post"></div>
 		</form>
