--- a/create_post.html
+++ b/create_post.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
+		<a href="{{login_url}}">{{login_text}}</a><br>
+		Welcome, {{name}}!
 		<form action = "/make-post" method = "post">
 			<div><textarea name = "title" rows = "1" cols = "80"></textarea></div>
 			<div>
