--- a/up_image_success.html
+++ b/up_image_success.html
@@ -2,9 +2,7 @@
 <html>
 	<body>
 		Welcome, {{name}}!
-		<p>The image was uploaded:
-		<p><img src = "{{plink}}">
-		<p>The permalink for the image is at: {{plink}}
+		<p>The image was successfully uploaded. The permalink for the image is at: <a href = "{{plink}}">{{plink}}</a>
 		<p><a href = "/upload-img">Upload another image</a>, or return to your blogs
 	</body>
 </html>
