Fixed some bugs, changed some pages to prevent unauthorized access

--- a/create_blog_success.html
+++ b/create_blog_success.html
@@ -7,7 +7,7 @@
 		</div>
 			
 		<p><a href = "/make-blog">Make another blog</a>
-		<p><a href = "/make-post">Make a post for this blog</a>
+		<p><a href = "/make-post/{{bname}}">Make a post for this blog</a>
 		<p><a href = "/">View your blogs</a>
 	</body>
 </html>
