--- a/up_image_success.html
+++ b/up_image_success.html
@@ -3,6 +3,6 @@
 	<body>
 		Welcome, {{name}}!
 		<p>The image was successfully uploaded. The permalink for the image is at: <a href = "{{plink}}">{{plink}}</a>
-		<p><a href = "/upload-img">Upload another image</a>, or return to your blogs
+		<p><a href = "/upload-img/">Upload another image</a>, or <a href = "/">return to your blogs</a>
 	</body>
 </html>
