--- a/wrong_person.html
+++ b/wrong_person.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		You're not authorized to make changes.
+		You're not authorized to make changes. <a href = "/">Return home</a>.
 	</body>
 </html>
