Small cosmetic changes, start to implement RSS

--- a/blog.html
+++ b/blog.html
@@ -7,12 +7,11 @@
 		<br>
 		<table width = "100%"align = "center" border="0" cellpadding="10">
 			<tr>
-				<td width="75%" valing = "top">
+				<td width="75%" valign = "top">
 					{{post_list|safe}}
 				</td>
 				<td width="25%" valign = "top">
 					<h2>Tags:</h2>
-					<br>
 					{{tag_list|safe}}
 				</td>
 			</tr>
