Added some url safe handles for links, and more links around the blog

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,10 @@
 <html>
 	<body>
 		<div align = "right">{{name}}<a href="{{login_url}}">{{login_text}}</a></div>
-		<div align = "center"><b><h1>{{title}}</h1></b></div>
+		<div align = "center">
+			<b><h1>{{title}}</h1></b>
+			<h2>By: {{owner}}</h2>
+		</div>
 		<div align = "right">{{options|safe}}</div>
 		<br>
 		<table width = "100%"align = "center" border="0" cellpadding="10">
