--- a/create_post.html
+++ b/create_post.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<a href="{{login_url}}">{{login_text}}</a><br>
-		Welcome, {{name}}!
+		Welcome, {{name}}! Create your post for <b>{{blog}}</b>:
 		<form action = "/created-post" method = "post">
-			<div><input type = "text" name = "title" size = "50"></div>
 			<div>
+				<p>Title:<br>
+				<input type = "text" name = "title" size = "50">
+			</div>
+			<div>
+				<p>Content:<br>
 				<textarea name = "content" rows = "10" cols = "80"></textarea>
 			</div>
-			<div><input type = "text" name = "tags" size = "50"></div>
+			<div>
+				<p>Tags (comma separated):<br>
+				<input type = "text" name = "tags" size = "50">
+			</div>
 			<input type = "hidden" name = "blog" value = "{{blog}}">
 			<div><input type="submit" value="Add Post"></div>
 		</form>
